# aws-tf-modules-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/skills/add-module/: SKILL.md
.claude/skills/refresh-module-docs/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml  publish.yml  scorecard.yml
docs/: docker-container-support.md
docs/superpowers/plans/: 2026-07-12-grep-module-docs.md  2026-07-12-grep-skills-integration.md  2026-07-12-security-quality-baseline.md  2026-07-13-submodule-orientation.md  2026-07-14-http-transport-plan.md  2026-07-14-proxy-and-image-slim-plan.md  2026-07-14-update-check-plan.md  2026-07-15-doc-completeness-pass.md  2026-07-15-onnx-encode-backend-plan.md  2026-07-15-orientation-quickwins.md  2026-07-15-retrieval-levers.md
docs/superpowers/specs/: 2026-07-12-grep-module-docs-design.md  2026-07-12-grep-skills-integration-design.md  2026-07-12-security-quality-baseline-design.md  2026-07-13-submodule-orientation-design.md  2026-07-14-http-transport-design.md  2026-07-14-proxy-and-image-slim-design.md  2026-07-14-update-check-design.md  2026-07-15-doc-completeness-pass-design.md  2026-07-15-onnx-encode-backend-design.md  2026-07-15-orientation-quickwins-design.md  2026-07-15-retrieval-levers-design.md
model/: tfmod_gte_small_index.pkl
model/any_overlay/: cloudposse__backup__aws.json  cloudposse__cloudtrail__aws.json  cloudposse__config__aws.json  cloudposse__guardduty__aws.json  cloudposse__security-hub__aws.json  cloudposse__ses__aws.json  cloudposse__sso__aws.json  cloudposse__vpc-peering__aws.json  terraform-aws-modules__acm__aws.json  terraform-aws-modules__alb__aws.json  terraform-aws-modules__apigateway-v2__aws.json  terraform-aws-modules__app-runner__aws.json  terraform-aws-modules__appconfig__aws.json  terraform-aws-modules__appsync__aws.json  terraform-aws-modules__atlantis__aws.json  terraform-aws-modules__autoscaling__aws.json  terraform-aws-modules__batch__aws.json  terraform-aws-modules__cloudfront__aws.json  terraform-aws-modules__cloudwatch__aws.json  terraform-aws-modules__customer-gateway__aws.json  terraform-aws-modules__datadog-forwarders__aws.json  terraform-aws-modules__dms__aws.json  terraform-aws-modules__dynamodb-table__aws.json  terraform-aws-modules__ebs-optimized__aws.json  terraform-aws-modules__ec2-instance__aws.json  terraform-aws-modules__ecr__aws.json  terraform-aws-modules__ecs__aws.json  terraform-aws-modules__efs__aws.json  terraform-aws-modules__eks-pod-identity__aws.json  terraform-aws-modules__eks__aws.json  terraform-aws-modules__elasticache__aws.json  terraform-aws-modules__elb__aws.json  terraform-aws-modules__emr__aws.json  terraform-aws-modules__eventbridge__aws.json  terraform-aws-modules__fsx__aws.json  terraform-aws-modules__global-accelerator__aws.json  terraform-aws-modules__iam__aws.json  terraform-aws-modules__key-pair__aws.json  terraform-aws-modules__kms__aws.json  terraform-aws-modules__lambda__aws.json  (+23 more)
modules/: module_template.md
modules/cloudposse/: backup.md  cloudtrail.md  config.md  guardduty.md  security-hub.md  ses.md  sso.md  vpc-peering.md
modules/terraform-aws-modules/: acm.md  alb.md  apigateway-v2.md  app-runner.md  appconfig.md  appsync.md  atlantis.md  autoscaling.md  batch.md  cloudfront.md  cloudwatch.md  customer-gateway.md  datadog-forwarders.md  dms.md  dynamodb-table.md  ebs-optimized.md  ec2-instance.md  ecr.md  ecs.md  efs.md  eks-pod-identity.md  eks.md  elasticache.md  elb.md  emr.md  eventbridge.md  fsx.md  global-accelerator.md  iam.md  key-pair.md  kms.md  lambda.md  managed-service-grafana.md  managed-service-prometheus.md  memory-db.md  msk-kafka-cluster.md  network-firewall.md  notify-slack.md  opensearch.md  rds-aurora.md  (+15 more)
plugins/tfmod-search/.claude-plugin/: plugin.json
plugins/tfmod-search/.codex-plugin/: plugin.json
plugins/tfmod-search/agents/: tf-diff-reviewer.md  tf-log-analyst.md
plugins/tfmod-search/codex/: mcp.json
plugins/tfmod-search/skills/aws-terraform-modules/: SKILL.md
plugins/tfmod-search/skills/tf-grep/: SKILL.md
plugins/tfmod-search/skills/tf-migrate/: SKILL.md
plugins/tfmod-search/skills/tf-module/: SKILL.md
plugins/tfmod-search/skills/tf-module-upgrade/: SKILL.md
scripts/: append_new_docs.py  build_any_overlay.py  export_onnx_model.py  lint_doc_completeness.py  reencode_changed_docs.py
src/: tfmod_any_examples.py  tfmod_doc_grep.py  tfmod_entry.py  tfmod_mcp_server.py  tfmod_onnx_encoder.py  tfmod_proxy.py  tfmod_registry_docs.py  tfmod_search_cli.py  tfmod_search_lib.py  tfmod_server_args.py
tests/: README.md  conftest.py
tests/e2e/: test_docker_launcher.py  test_mcp_http_e2e.py  test_mcp_proxy_e2e.py  test_mcp_stdio_e2e.py  test_package_e2e.py  test_plugin_e2e.py  test_skill_scripts.py
tests/fixtures/: doc_completeness_allowlist.txt  registry_vpc_min.json
tests/fixtures/any_overlay/: terraform-aws-modules__cloudwatch__aws.json  terraform-aws-modules__rds__aws.json  terraform-aws-modules__s3-bucket__aws.json
tests/integration/: __init__.py  test_all_modules_searchable.py  test_any_examples.py  test_any_overlay_build.py  test_append_new_docs.py  test_capability_coverage.py  test_cli_index.py  test_doc_completeness.py  test_doc_completeness_linter.py  test_doc_grep.py  test_doc_schema.py  test_encode_lock.py  test_encoder_backends.py  test_exact_match_boundary.py  test_grep_module_docs.py  test_grep_module_docs_live.py  test_mcp_server.py  test_model_comparison.py  test_module_id_header.py  test_parse_markdown.py  test_proxy_light_imports.py  test_reencode_changed_docs.py  test_registry_comparison.py  test_registry_docs.py  test_repro_pack.py  test_retrieval_levers.py  test_security_config.py  test_transport_args.py  test_type_collapse.py  test_update_check.py  test_verdict_rule.py
(+23 files in other folders)
